add api.rst and updated docstrings

--- a/docs/conventions/cflike.ipynb
+++ b/docs/conventions/cflike.ipynb
@@ -48,6 +48,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "27b7e650-30ef-470f-a80d-6c936378f9db",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<StandardName: x_wind [m/s] | SNT: None | desc: x wind component>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from h5rdmtoolbox.conventions.cflike import StandardName\n",
+    "StandardName(name='x_wind', canonical_units='m/s', description='x wind component')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "12b0e8cc-2ddb-4eba-ab5c-2556d529c45d",
    "metadata": {},
@@ -78,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3026a8e2-ebf6-48aa-9bd6-9d915b9672d9",
    "metadata": {
     "tags": []
@@ -88,7 +112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-27_13:49:47,364 INFO     [__init__.py:78] Switched to \"cflike\"\n"
+      "2023-03-27_23:34:41,296 INFO     [__init__.py:78] Switched to \"cflike\"\n"
      ]
     }
    ],
@@ -109,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "52a96fd3-318c-4e0a-8c57-82cfcb170480",
    "metadata": {
     "tags": []
@@ -156,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "310aa4c8-b49c-4103-89ab-ab5273c4bb29",
    "metadata": {
     "tags": []
@@ -368,35 +392,35 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4528472900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4528472900\">\n",
+       "                        <input id=\"group-ds--5308991700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5308991700\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a8</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/method-4529254600\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/method-4529259400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/method-5309844500\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-5309847300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                for=\"ds-2-/method-4529259400\">method</label>: b'linear_interpolation'\n",
+       "                for=\"ds-2-/method-5309847300\">method</label>: b'linear_interpolation'\n",
        "                \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-4529647900\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-4529650600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-4529650600\">u</label>\n",
+       "                <ul id=\"ds-1-/u-5310151700\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-5310154300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-5310154300\">u</label>\n",
        "                <span class=\"h5tb-dims\">1.2 (float64)</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-4531788300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-4531791900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-4531791900\">v</label>\n",
+       "                <ul id=\"ds-1-/v-5311530400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-5311533300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-5311533300\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : y_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
@@ -439,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1ff26571-cb9d-46d4-bb29-4c0c6b14bc8b",
    "metadata": {
     "tags": []
@@ -481,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "39958f4f-607b-4f8f-a006-2a1612574c0a",
    "metadata": {
     "tags": []
@@ -693,8 +717,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4634941300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4634941300\">\n",
+       "                        <input id=\"group-ds--5406559800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5406559800\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -730,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "dfdb1240-99c2-4bf6-9a6d-17fd03b5eef0",
    "metadata": {},
    "outputs": [],
@@ -740,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "569b7ff4-5e17-4eda-9e8b-d449277f203e",
    "metadata": {
     "tags": []
@@ -752,7 +776,7 @@
        "Test_SNC (version number: 1)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "77561296-edfe-476c-b316-553c1ff92cee",
    "metadata": {},
    "outputs": [
@@ -789,7 +813,7 @@
        "  'description': 'velocity is a vector quantity.'}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1c3230f1-2a0d-4b09-b885-3b6a8a16fe83",
    "metadata": {},
    "outputs": [
@@ -856,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9e4ce9fe-de0e-4e3c-9410-e5dc891294af",
    "metadata": {
     "tags": []
@@ -898,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7d29f972-b6c2-4a25-85cc-8d8c39f28154",
    "metadata": {
     "tags": []
@@ -923,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d4e396b6-9564-4e39-aba8-0c8e9ebbef90",
    "metadata": {},
    "outputs": [
@@ -953,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3fe3ac64-a900-407c-ac09-69ec7187a538",
    "metadata": {},
    "outputs": [
@@ -984,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "be7625e3-349d-49bd-a14c-e9b2f220da91",
    "metadata": {
     "tags": []
@@ -1048,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "93b5a06b-ce63-4d94-852e-5c16e73458c7",
    "metadata": {
     "tags": []
@@ -1057,10 +1081,10 @@
     {
      "data": {
       "text/plain": [
-       "'x_velocity'"
+       "<StandardName: x_velocity [m/s] | SNT: Test_SNC | desc: velocity is a vector quantity. x indicates the component in y-axis direction>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3cbe804a-0868-43c6-ae92-f813e4fed72a",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1105,7 @@
        "Test_SNC (version number: 1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f3861a50-33bc-4625-80d3-6ef95deeddf6",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "49060588-f59a-415b-b0ca-55afbf4f609a",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1196,7 @@
        "standard_name_table (version number: 79)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "b51e8fb3-e174-41e8-9737-c5ebf8fccb3d",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1218,7 @@
        "'standard_name_table-v79'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "24fcc5e1-6c7a-43ce-a370-47ebe5449ba5",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "ae55dbd6-af9a-4346-b232-b9f4fed3e436",
    "metadata": {},
    "outputs": [
@@ -1294,7 +1318,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "7ef1281b-1b74-4143-b57e-299735526941",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1339,7 @@
        "'m/s'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "67174d49-18b5-4c47-af61-36e391f85eb0",
    "metadata": {},
    "outputs": [],
@@ -1339,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "6497fe45-cb00-4566-9031-4fdad221ccff",
    "metadata": {},
    "outputs": [
@@ -1356,7 +1380,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "fbf33dbe-4453-482e-8cd9-2462bf7f81c0",
    "metadata": {},
    "outputs": [],
@@ -1391,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "ef3f5cbe-4106-469c-a85d-d5517be154d8",
    "metadata": {},
    "outputs": [
@@ -1399,8 +1423,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-27_13:49:51,29 ERROR    [standard_name.py:744]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-27_13:49:51,29 ERROR    [standard_name.py:744]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-03-27_23:34:45,205 ERROR    [standard_name.py:830]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
+      "2023-03-27_23:34:45,205 ERROR    [standard_name.py:830]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
@@ -1418,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "0fd0adab-2a27-456d-96bb-c3f07e9773f6",
    "metadata": {},
    "outputs": [],
@@ -1428,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "ba85f48f-9c41-4a24-b267-c182ff400e2e",
    "metadata": {},
    "outputs": [
@@ -1436,15 +1460,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp838\\tmp11.hdf\" with standard name table \"standard_name_table-v79\"\n"
+      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp862\\tmp11.hdf\" with standard name table \"standard_name_table-v79\"\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-27_13:50:05,458 ERROR    [standard_name.py:744]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-27_13:50:05,458 ERROR    [standard_name.py:744]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-03-27_23:35:02,603 ERROR    [standard_name.py:830]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
+      "2023-03-27_23:35:02,603 ERROR    [standard_name.py:830]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
