--- a/docs/wrapper/wrapper_and_conventions/cflike.ipynb
+++ b/docs/wrapper/wrapper_and_conventions/cflike.ipynb
@@ -24,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-29_15:15:37,122 INFO     [__init__.py:61] Switched to \"cflike\"\n"
+      "2023-03-27_21:12:05,256 INFO     [__init__.py:78] Switched to \"cflike\"\n"
      ]
     }
    ],
@@ -304,12 +304,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4398998300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4398998300\">\n",
+       "                        <input id=\"group-ds--5239834800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5239834800\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a1</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a8</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -575,51 +575,40 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4452626000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4452626000\">\n",
+       "                        <input id=\"group-ds--5328865300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5328865300\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a1</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a8</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/method-4453513200\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/method-4453518100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/method-5329692100\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-5329694800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                for=\"ds-2-/method-4453518100\">method</label>: b'linear_interpolation'\n",
+       "                for=\"ds-2-/method-5329694800\">method</label>: b'linear_interpolation'\n",
        "                \n",
-       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
        "\n",
-       "                    </ul>\n",
-       "\n",
-       "                 </ul>\n",
-       "                 \n",
-       "\n",
-       "                <ul id=\"ds-1-/u-4453897300\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-4453901300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/u-4453901300\">u</label>\n",
+       "                <ul id=\"ds-1-/u-5329990600\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-5329993300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-5329993300\">u</label>\n",
        "                <span class=\"h5tb-dims\">1.2 (float64)</span> [m/s]\n",
-       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
        "\n",
-       "                    </ul>\n",
-       "\n",
-       "                 </ul>\n",
-       "                 \n",
-       "\n",
-       "                <ul id=\"ds-1-/v-4457963600\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/v-4457968800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/v-4457968800\">v</label>\n",
-       "                <span class=\"h5tb-dims\">(3,) (int32)</span> [m/s]\n",
-       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
+       "                <ul id=\"ds-1-/v-5332114500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-5332118200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-5332118200\">v</label>\n",
+       "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : y_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
-       "\n",
-       "                    </ul>\n",
-       "\n",
-       "                 </ul>\n",
-       "                 \n",
+       "                </ul>\n",
+       "                </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</div>"
@@ -655,13 +644,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "8516e747-447b-4d13-806a-7e1b11cbdada",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.3.0a1\n",
+      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.3.0a8\n",
       "/\u001b[1mmygrp\u001b[0m\n",
       "/\u001b[1mothergrp\u001b[0m\n",
       "  \u001b[3ma: long_name\u001b[0m: my other group\n"
