--- a/docs/references.bib
+++ b/docs/references.bib
@@ -7,3 +7,14 @@
   pages={4},
   year={2003}
 }
+
+@article{michener2006meta,
+  title={Meta-information concepts for ecological data management},
+  author={Michener, William K},
+  journal={Ecological informatics},
+  volume={1},
+  number={1},
+  pages={3--7},
+  year={2006},
+  publisher={Elsevier}
+}
