refactored standard attributes to go well with publication

--- a/docs/conventions/cflike.ipynb
+++ b/docs/conventions/cflike.ipynb
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "from h5rdmtoolbox.conventions.cflike import StandardName\n",
+    "from h5rdmtoolbox.conventions import StandardName\n",
     "StandardName(name='x_wind', canonical_units='m/s', description='x wind component')"
    ]
   },
@@ -112,7 +112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-27_23:34:41,296 INFO     [__init__.py:78] Switched to \"cflike\"\n"
+      "2023-03-30_15:37:17,891 INFO     [__init__.py:78] Switched to \"cflike\"\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
    },
    "outputs": [],
    "source": [
-    "h5tbx.conventions.cflike.standard_name.STRICT = False"
+    "h5tbx.conventions.standard_name.STRICT = False"
    ]
   },
   {
@@ -392,38 +392,38 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5308991700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5308991700\">\n",
+       "                        <input id=\"group-ds--4805015100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4805015100\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a8</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/method-5309844500\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/method-5309847300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/method-4806546700\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-4806551300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                for=\"ds-2-/method-5309847300\">method</label>: b'linear_interpolation'\n",
+       "                for=\"ds-2-/method-4806551300\">method</label>: b'linear_interpolation'\n",
        "                \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-5310151700\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-5310154300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-5310154300\">u</label>\n",
+       "                <ul id=\"ds-1-/u-4807207800\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-4807212700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-4807212700\">u</label>\n",
        "                <span class=\"h5tb-dims\">1.2 (float64)</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-5311530400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-5311533300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-5311533300\">v</label>\n",
+       "                <ul id=\"ds-1-/v-4812420600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-4812424200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-4812424200\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name : y_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "             italic\">standard_name : <StandardName: y_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -473,10 +473,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.3.0a8\n",
-      "/\u001b[1mmygrp\u001b[0m\n",
-      "/\u001b[1mothergrp\u001b[0m\n",
-      "  \u001b[3ma: long_name\u001b[0m: my other group\n"
+      "\u001B[3ma: __h5rdmtoolbox_version__\u001B[0m: 0.3.0a9\n",
+      "/\u001B[1mmygrp\u001B[0m\n",
+      "/\u001B[1mothergrp\u001B[0m\n",
+      "  \u001B[3ma: long_name\u001B[0m: my other group\n"
      ]
     }
    ],
@@ -717,12 +717,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5406559800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5406559800\">\n",
+       "                        <input id=\"group-ds--4908396100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4908396100\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a8</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -759,7 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.conventions.cflike import StandardNameTable"
+    "from h5rdmtoolbox.conventions import StandardNameTable"
    ]
   },
   {
@@ -1388,7 +1388,7 @@
    "source": [
     "try:\n",
     "    cf.check_units('zenith_angle', units='K')\n",
-    "except h5tbx.errors.StandardNameError as e:\n",
+    "except h5tbx.conventions.standard_name.StandardNameError as e:\n",
     "    print(e)\n",
     "cf.check_units('zenith_angle', units='degree')"
    ]
@@ -1423,8 +1423,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-27_23:34:45,205 ERROR    [standard_name.py:830]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-27_23:34:45,205 ERROR    [standard_name.py:830]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-03-30_15:37:21,654 ERROR    [standard_name.py:933]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
+      "2023-03-30_15:37:21,654 ERROR    [standard_name.py:933]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
@@ -1460,15 +1460,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp862\\tmp11.hdf\" with standard name table \"standard_name_table-v79\"\n"
+      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp835\\tmp11.hdf\" with standard name table \"standard_name_table-v79\"\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-27_23:35:02,603 ERROR    [standard_name.py:830]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-27_23:35:02,603 ERROR    [standard_name.py:830]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-03-30_15:37:38,757 ERROR    [standard_name.py:933]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
+      "2023-03-30_15:37:38,757 ERROR    [standard_name.py:933]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
