--- a/docs/wrapper/wrapper_and_conventions/cflike.ipynb
+++ b/docs/wrapper/wrapper_and_conventions/cflike.ipynb
@@ -24,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-27_21:12:05,256 INFO     [__init__.py:78] Switched to \"cflike\"\n"
+      "2023-03-30_15:41:22,923 INFO     [__init__.py:78] Switched to \"cflike\"\n"
      ]
     }
    ],
@@ -68,10 +68,7 @@
    "source": [
     "## Working with HDF5 files following the cf-like convention\n",
     "\n",
-    "Some attributes are obligatory to provide with a dataset:\n",
-    "- `units`\n",
-    "- `standard_name`\n",
-    "- `long_name` (not needed if `standard_name` exists and vise versa)\n",
+    "It is obligatory to pass `units` and either `standard_name` or `long_name`. Those are three of multiple standard attributes.\n",
     "\n",
     "**units**<br>\n",
     "We expect that each data set written to the HDF5 file has a physical unit or no unit at all. It is registered in the attribute `units`.\n",
@@ -304,12 +301,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5239834800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5239834800\">\n",
+       "                        <input id=\"group-ds--4561961800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4561961800\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a8</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -365,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "bd1fe8c7-2f3c-409e-8da4-cb2d78d1a5a5",
    "metadata": {},
    "outputs": [
@@ -575,38 +572,38 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5328865300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5328865300\">\n",
+       "                        <input id=\"group-ds--335951948400\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--335951948400\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a8</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/method-5329692100\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/method-5329694800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/method-335952851000\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-335952853500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                for=\"ds-2-/method-5329694800\">method</label>: b'linear_interpolation'\n",
+       "                for=\"ds-2-/method-335952853500\">method</label>: b'linear_interpolation'\n",
        "                \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-5329990600\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-5329993300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-5329993300\">u</label>\n",
+       "                <ul id=\"ds-1-/u-335953161400\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-335953163900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-335953163900\">u</label>\n",
        "                <span class=\"h5tb-dims\">1.2 (float64)</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-5332114500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-5332118200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-5332118200\">v</label>\n",
+       "                <ul id=\"ds-1-/v-335954020500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-335954022800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-335954022800\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name : y_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "             italic\">standard_name : <StandardName: y_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -642,23 +639,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8516e747-447b-4d13-806a-7e1b11cbdada",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.3.0a8\n",
-      "/\u001b[1mmygrp\u001b[0m\n",
-      "/\u001b[1mothergrp\u001b[0m\n",
-      "  \u001b[3ma: long_name\u001b[0m: my other group\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.create_group('mygrp')\n",
