--- a/docs/conventions/standard_attributes.ipynb
+++ b/docs/conventions/standard_attributes.ipynb
@@ -79,21 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fb04c4a3-6983-4019-a825-c0a1cbb005b0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "conventions.register_standard_attribute(attribute=SoftwareAttribute(),\n",
-    "                                        cls=h5tbx.wrapper.core.Dataset,\n",
-    "                                        overwrite=True)"
+    "SoftwareAttribute().register(cls=h5tbx.wrapper.core.Dataset, overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "59f014f3-43c8-407e-b1fd-5f757ed67d69",
    "metadata": {
     "tags": []
@@ -127,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "27d8fba9-68ee-4898-9fdd-4414e3d48ac1",
    "metadata": {
     "tags": []
@@ -139,7 +137,7 @@
        "Software(name='MySoftware', vers='v1.1.3')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "688a758c-70de-483c-ad08-baec3fd4d930",
    "metadata": {
     "tags": []
@@ -172,7 +170,7 @@
        "Software(name='MySoftware', vers='v1.1.3')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c4173ee3-a3de-42e5-adcc-94fb99bc6f0e",
    "metadata": {
     "tags": []
@@ -207,7 +205,7 @@
        "{'name': 'MySoftware', 'vers': 'v1.1.3'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d512bdb0-bee2-47f1-bd0b-84e197e6c0c2",
    "metadata": {
     "tags": []
@@ -242,7 +240,7 @@
      "text": [
       "Attributes of \"/\":\n",
       "------------------\n",
-      "__h5rdmtoolbox_version__:  0.3.0a8\n"
+      "__h5rdmtoolbox_version__:  0.3.0a9\n"
      ]
     }
    ],
