--- a/docs/conventions/default.ipynb
+++ b/docs/conventions/default.ipynb
@@ -5,14 +5,9 @@
    "id": "b25a8b63-1d72-4977-9cf4-dfd4d15da2cc",
    "metadata": {},
    "source": [
-    "# Default Convention\n",
+    "# No Convention\n",
     "\n",
-    "The default convention in this package does not prescribe any attributes. This is the initial convention used by the\n",
-    "package. Like this additional features are available to the user but the user is not forced to use specific attributes.\n",
-    "Hence the usage is similar to the usage of the standard library `h5py`.\n",
-    "\n",
-    "If a project requires a specific convention, it can be written and registered to the package and available\n",
-    "in future sessions. One such convention could be the CF-like-convention (see next section)."
+    "Selecting no convention will not impose any mandatory attributes. The user get's all features of the `h5py` package plus some extra useful functionality outlined in [the wrapper notebooks](../wrapper/CreateFile.ipynb)."
    ]
   },
   {
@@ -32,7 +27,7 @@
    "id": "8188b62a-b9e3-4c78-9425-7b146c679799",
    "metadata": {},
    "source": [
-    "Both `None`and `default` will enable the \"default-convention\":"
+    "Both `None`and \"h5py\" will enable the \"default-convention\":"
    ]
   },
   {
@@ -47,15 +42,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-30_15:37:14,38 INFO     [__init__.py:63] Switched to \"default\"\n",
-      "2023-03-30_15:37:14,43 INFO     [__init__.py:63] Switched to \"default\"\n"
+      "2023-03-31_09:21:04,764 INFO     [__init__.py:63] Switched to convention \"h5py\"\n",
+      "2023-03-31_09:21:04,767 INFO     [__init__.py:63] Switched to convention \"h5py\"\n"
      ]
     }
    ],
    "source": [
     "use(None)\n",
-    "use('default')"
+    "use('h5py')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4101de34-786c-4ac5-98e3-39aa12c1df43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
