--- a/docs/conventions/standard_attributes.ipynb
+++ b/docs/conventions/standard_attributes.ipynb
@@ -59,13 +59,12 @@
     "    \n",
     "    name = 'software'\n",
     "    \n",
-    "    def setter(self, obj, name_version: \"Tuple\"):\n",
+    "    def set(self, name_version: \"Tuple\"):\n",
     "        name_vers_dict = dict(name=name_version[0], vers=name_version[1])\n",
-    "        obj.attrs.create(self.name, json.dumps(name_vers_dict))\n",
+    "        super().set(json.dumps(name_vers_dict))\n",
     "        \n",
-    "    def getter(self, obj):\n",
-    "        sftw_str = self.safe_getter(obj)\n",
-    "        sftw_dict = json.loads(sftw_str)\n",
+    "    def get(self):\n",
+    "        sftw_dict = json.loads(super().get())\n",
     "        return Software(**sftw_dict)"
    ]
   },
@@ -79,19 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fb04c4a3-6983-4019-a825-c0a1cbb005b0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "SoftwareAttribute().register(cls=h5tbx.wrapper.core.Dataset, overwrite=True)"
+    "SoftwareAttribute.register(target_cls=h5tbx.wrapper.core.Dataset, overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "59f014f3-43c8-407e-b1fd-5f757ed67d69",
    "metadata": {
     "tags": []
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "27d8fba9-68ee-4898-9fdd-4414e3d48ac1",
    "metadata": {
     "tags": []
@@ -137,7 +136,7 @@
        "Software(name='MySoftware', vers='v1.1.3')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "688a758c-70de-483c-ad08-baec3fd4d930",
    "metadata": {
     "tags": []
@@ -170,7 +169,7 @@
        "Software(name='MySoftware', vers='v1.1.3')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c4173ee3-a3de-42e5-adcc-94fb99bc6f0e",
    "metadata": {
     "tags": []
@@ -205,7 +204,7 @@
        "{'name': 'MySoftware', 'vers': 'v1.1.3'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d512bdb0-bee2-47f1-bd0b-84e197e6c0c2",
    "metadata": {
     "tags": []
