--- a/docs/conventions/tbx.ipynb
+++ b/docs/conventions/tbx.ipynb
@@ -5,9 +5,9 @@
    "id": "b67a50a3-7c27-4340-8921-e36cef67debb",
    "metadata": {},
    "source": [
-    "# CF-like Convention\n",
+    "# Toolbox Convention (\"tbx\")\n",
     "\n",
-    "The \"CF-like Convention\" is based on the CF Metadata Convention (https://cfconventions.org/).\n",
+    "The default convention shipped with the `h5rdmtoolbox` is called \"tbx\" and is largely based on the CF Metadata Convention (https://cfconventions.org/).\n",
     "At its core, so-called `standard_names` are defined for each relevant physical quantity. It is documented with its\n",
     "canonical units and a comprehensive description in a versioned table available to all users. No credits are taken\n",
     "for the following as everything is based on the CF Metadata Convention.\n",
@@ -97,7 +97,7 @@
    "id": "86739414-d764-46d9-b430-890b32305fcf",
    "metadata": {},
    "source": [
-    "To activate the convention inside the `h5rdmtoolbox`, call `use(cflike)`:"
+    "To activate the convention inside the `h5rdmtoolbox`, call `use(tbx)`:"
    ]
   },
   {
@@ -107,20 +107,12 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-30_15:37:17,891 INFO     [__init__.py:78] Switched to \"cflike\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox import use\n",
     "\n",
-    "use('cflike')"
+    "use('tbx')"
    ]
   },
   {
@@ -148,7 +140,7 @@
    "id": "35f34c5c-f057-423f-97fd-73e6c6ad9db3",
    "metadata": {},
    "source": [
-    "The string representation of the HDF5 file object indicates, that the cflike-convention is enabled:"
+    "The string representation of the HDF5 file object indicates, that the tbx-convention is enabled:"
    ]
   },
   {
@@ -392,35 +384,35 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4805015100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4805015100\">\n",
+       "                        <input id=\"group-ds--4341971700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4341971700\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/method-4806546700\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/method-4806551300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/method-4342838100\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-4342840700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                for=\"ds-2-/method-4806551300\">method</label>: b'linear_interpolation'\n",
+       "                for=\"ds-2-/method-4342840700\">method</label>: b'linear_interpolation'\n",
        "                \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-4807207800\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-4807212700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-4807212700\">u</label>\n",
+       "                <ul id=\"ds-1-/u-4343141800\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-4343144300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-4343144300\">u</label>\n",
        "                <span class=\"h5tb-dims\">1.2 (float64)</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-4812420600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-4812424200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-4812424200\">v</label>\n",
+       "                <ul id=\"ds-1-/v-4344609300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-4344612000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-4344612000\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : <StandardName: y_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
@@ -473,10 +465,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[3ma: __h5rdmtoolbox_version__\u001B[0m: 0.3.0a9\n",
-      "/\u001B[1mmygrp\u001B[0m\n",
-      "/\u001B[1mothergrp\u001B[0m\n",
-      "  \u001B[3ma: long_name\u001B[0m: my other group\n"
+      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.3.0a9\n",
+      "/\u001b[1mmygrp\u001b[0m\n",
+      "/\u001b[1mothergrp\u001b[0m\n",
+      "  \u001b[3ma: long_name\u001b[0m: my other group\n"
      ]
     }
    ],
@@ -717,8 +709,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4908396100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4908396100\">\n",
+       "                        <input id=\"group-ds--4454462100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4454462100\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -1423,8 +1415,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-30_15:37:21,654 ERROR    [standard_name.py:933]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-30_15:37:21,654 ERROR    [standard_name.py:933]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-03-31_13:21:07,538 ERROR    [standard_name.py:937]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
+      "2023-03-31_13:21:07,538 ERROR    [standard_name.py:937]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
@@ -1460,15 +1452,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp835\\tmp11.hdf\" with standard name table \"standard_name_table-v79\"\n"
+      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp906\\tmp11.hdf\" with standard name table \"standard_name_table-v79\"\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-30_15:37:38,757 ERROR    [standard_name.py:933]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-30_15:37:38,757 ERROR    [standard_name.py:933]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-03-31_13:21:24,551 ERROR    [standard_name.py:937]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
+      "2023-03-31_13:21:24,551 ERROR    [standard_name.py:937]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
