--- a/docs/database/Serverless.ipynb
+++ b/docs/database/Serverless.ipynb
@@ -17,22 +17,14 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-01_14:10:42,685 INFO     [__init__.py:72] Switched to \"cflike\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from h5rdmtoolbox import database as h5db\n",
     "from h5rdmtoolbox import tutorial\n",
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox import config\n",
     "\n",
-    "h5tbx.use('cflike')\n",
+    "h5tbx.use('tbx')\n",
     "\n",
     "from pprint import pprint"
    ]
@@ -257,39 +249,39 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5058974800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5058974800\">\n",
+       "                        <input id=\"group-ds--4763254700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4763254700\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/velocity-5060568400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/velocity-5060571000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-5060571000\">velocity</label>\n",
+       "                <ul id=\"ds-1-/velocity-4765250300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/velocity-4765254600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-4765254600\">velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-sub-5060779400\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-sub-5060779400\">\n",
+       "                        <input id=\"group-ds-sub-4766618500\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-sub-4766618500\">\n",
        "                        sub<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/sub/velocity-5061150700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/sub/velocity-5061153200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/sub/velocity-5061153200\">velocity</label>\n",
+       "                <ul id=\"ds-1-/sub/velocity-4767230000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/sub/velocity-4767233900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/sub/velocity-4767233900\">velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(5) [int32]</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -336,24 +328,24 @@
      "output_type": "stream",
      "text": [
       "find basename=velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">,\n",
-      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">,\n",
+      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n",
       "\n",
       "find name=/velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n",
       "\n",
       "find name=/sub/velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">]\n",
       "\n",
       "find basename=velocity in sub/:\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">]\n",
       "\n",
       "find basename=velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n",
       "\n",
       "find basename=velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">,\n",
-      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n"
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">,\n",
+      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n"
      ]
     }
    ],
@@ -388,7 +380,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<HDF5 wrapper group \"/sub\" (members: 1, convention: \"cflike\")>]\n"
+      "[<HDF5 wrapper group \"/sub\" (members: 1, convention: \"tbx\")>]\n"
      ]
     }
    ],
@@ -415,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">\n"
+      "<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">\n"
      ]
     }
    ],
@@ -442,9 +434,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">]\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">,\n",
-      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n"
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">,\n",
+      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n"
      ]
     }
    ],
@@ -479,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
