--- a/docs/wrapper/wrapper_and_conventions/tbx.ipynb
+++ b/docs/wrapper/wrapper_and_conventions/tbx.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# CF-like\n",
     "\n",
-    "The cf-conventions ([cfconventions.org]) promote the usage of specific attributes in order to fully describe a variable (dataset). The `h5rdmtoolbox` at this stage implements the CF convention in a very simlar way. As it is probably not the 100% equivilant yet, we call the convention `cflike`. More details used naming within the convention can also be found [here](../../conventions/cflike.ipynb)\n",
+    "The cf-conventions ([cfconventions.org]) promote the usage of specific attributes in order to fully describe a variable (dataset). The `h5rdmtoolbox` at this stage implements the CF convention in a very simlar way. As it is probably not the 100% equivilant yet, we call the convention `tbx`. More details used naming within the convention can also be found [here](../../conventions/tbx.ipynb)\n",
     "\n",
-    "The convention can be switched durng runtime. The default convention (means using no convention) is `default`, to switch to the CF-like call `use('cflike')`:\n",
+    "The convention can be switched durng runtime. The default convention (means using no convention) is `default`, to switch to the CF-like call `use('tbx')`:\n",
     "\n",
     "[cfconventions.org]: http://cfconventions.org/"
    ]
@@ -24,13 +24,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-30_15:41:22,923 INFO     [__init__.py:78] Switched to \"cflike\"\n"
+      "2023-03-31_09:26:45,976 INFO     [__init__.py:78] Switched to convention \"tbx\"\n"
      ]
     }
    ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
-    "h5tbx.use('cflike')"
+    "h5tbx.use('tbx')"
    ]
   },
   {
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'h5rdmtoolbox.File' convention: cflike>\n"
+      "<class 'h5rdmtoolbox.File' convention: tbx>\n"
      ]
     }
    ],
@@ -301,8 +301,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4561961800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4561961800\">\n",
+       "                        <input id=\"group-ds--4621815300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4621815300\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "bd1fe8c7-2f3c-409e-8da4-cb2d78d1a5a5",
    "metadata": {},
    "outputs": [
@@ -572,35 +572,35 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--335951948400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--335951948400\">\n",
+       "                        <input id=\"group-ds--4727353300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4727353300\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/method-335952851000\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/method-335952853500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/method-4728433700\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-4728436800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                for=\"ds-2-/method-335952853500\">method</label>: b'linear_interpolation'\n",
+       "                for=\"ds-2-/method-4728436800\">method</label>: b'linear_interpolation'\n",
        "                \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-335953161400\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-335953163900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-335953163900\">u</label>\n",
+       "                <ul id=\"ds-1-/u-4729093700\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-4729096500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-4729096500\">u</label>\n",
        "                <span class=\"h5tb-dims\">1.2 (float64)</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-335954020500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-335954022800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-335954022800\">v</label>\n",
+       "                <ul id=\"ds-1-/v-4732010700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-4732013100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-4732013100\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : <StandardName: y_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
@@ -639,12 +639,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8516e747-447b-4d13-806a-7e1b11cbdada",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.3.0a9\n",
+      "/\u001b[1mmygrp\u001b[0m\n",
+      "/\u001b[1mothergrp\u001b[0m\n",
+      "  \u001b[3ma: long_name\u001b[0m: my other group\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.create_group('mygrp')\n",
